# server

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REUSE.toml  codecov.yml  conftest.py  manage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.yml
.github/workflows/: ci.yml
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  apps.py  models.py  tests.py  views.py
apps/accounts/managers/: __init__.py  user_manager.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/models/: __init__.py  user.py
apps/accounts/tests/: __init__.py  conftest.py  test_admin.py  test_user.py  test_user_manager.py
apps/accounts/tests/factories/: __init__.py  user.py
apps/chords/: __init__.py  admin.py  apps.py  constants.py  models.py  selectors.py  serializers.py  services.py  views.py
apps/chords/api/: __init__.py  urls.py  views.py
apps/chords/migrations/: 0001_initial.py  0002_alter_chordposition_finger_alter_chordposition_fret.py
apps/chords/tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_constants.py  test_models.py  test_selectors.py  test_serializers.py  test_services.py
apps/chords/tests/integration/: test_chords_crud.py
apps/image_schemes/: __init__.py  admin.py  apps.py  models.py
apps/schemes/: __init__.py  admin.py  apps.py  models.py
apps/schemes/api/: views.py
apps/schemes/migrations/: 0001_initial.py
apps/schemes/tests/: __init__.py  conftest.py  factories.py  test_admin.py  test_models.py
apps/shared/: __init__.py  permissions.py
apps/shared/tests/: __init__.py  conftest.py  test_permissions.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  filters.py  logging.py
scripts/: __init__.py  lint.py
tests/integration/scripts/: test_lint_integration.py
tests/unit/config/: test_filters.py  test_logging.py  test_settings.py  test_sgi.py  test_urls.py
tests/unit/scripts/: test_lint.py
